--- a/css/styles.css
+++ b/css/styles.css
@@ -26,12 +26,14 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-right: 76px;
 }
 
 .container {
   max-width: 1158px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0 15px 0 15px;
 }
 
 header {
@@ -47,6 +49,10 @@ header .container a {
   padding: 24px 0;
 }
 
+.nav-wrap {
+  align-items: center
+}
+
 nav, address {
   display: flex;
 }
@@ -58,8 +64,6 @@ span.logo {
 .main-menu {
   display: flex;
   gap: 40px;
-  margin-left: 76px;
-  align-self: center;
 }
 
 .nav-link {
@@ -103,24 +107,22 @@ span.logo {
   color: #404bbf;
 }
 
-section {
-  padding: 120px 0;
-}
-
 .solutions-wrap {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 .solutions-wrap .container {
-  width: 496px;
-  padding: 68px 0;
+  text-align: center;
 }
 
 .first-header-class {
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
+  max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button {
@@ -134,7 +136,10 @@ section {
   border: none;
   cursor: pointer;
   display: block;
+  min-width: 169px;
   margin: 48px auto 0 auto;
+  height: 56px;
+  border-radius: 4px;
 }
 
 .button:hover {
@@ -145,13 +150,13 @@ section {
   background-color: #404bbf;
 }
 
+.features {
+  padding: 120px 0 120px 0;
+}
+
 .features-list {
   display: flex;
   gap: 24px;
-}
-
-.features-list li {
-  width: calc(1086px / 4);
 }
 
 .second-header-class {
@@ -163,8 +168,16 @@ section {
   color: #2e2f42;
 }
 
-.features .second-header-class {
+.our-team-wrap .second-header-class {
+  margin-bottom: 72px;
+}
+
+.visually-hidden {
   display: none;
+}
+
+.features-list-element {
+  width: calc((100% - 3 * 24px) / 4);
 }
 
 .third-header-class {
@@ -173,6 +186,12 @@ section {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.features .third-header-class {
+  margin-bottom: 8px;
 }
 
 .text {
@@ -180,60 +199,80 @@ section {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  text-align: center;
 }
 
 .our-team-wrap {
   background-color: #f4f4fd;
+  padding: 120px 0 120px 0;
 }
 
-.our-team-list, .our-portfolio-list {
+.our-team-list {
   display: flex;
   gap: 24px;
-  margin-top: 72px;
-}
-
-.our-team-list li, .our-portfolio-list li {
-  padding-bottom: 32px;
 }
 
 .our-team-list img, .our-portfolio-list img {
   display: block;
-  margin-bottom: 32px;
 }
 
 .our-team-card {
   background-color: #ffffff;
-  text-align: center;
+  width: calc((100% - 72) / 4);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.person-desc {
+  padding: 32px 0;
+}
+
+.our-portfolio-wrap .second-header-class {
+  margin-bottom: 72px;
+}
+
+.our-portfolio-wrap {
+  padding: 120px 0 120px 0;
 }
 
 .our-portfolio-card {
   background-color: #ffffff;
+  width: calc((100% - 48px) / 3);
 }
 
 .our-portfolio-list {
+  display: flex;
   flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 
-.our-portfolio-list li {
-  width: calc(1110px / 3);
+.app-desc {
+  padding: 32px 16px
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.our-portfolio-wrap .third-header-class {
+  margin-bottom: 8px;
 }
 
 .footer-wrap {
   background-color: #2e2f42;
-}
-
-.footer-wrap .container {
-  padding: 100px 0;
-  width: 264px;
-  margin-left: 156px;
+  padding: 100px 0
 }
 
 .text-footer {
   line-height: 1.5;
   color: #f4f4fd;
   letter-spacing: 0.02em;
+  max-width: 264px;
 }
 
 .logo-footer {
   color: #f4f4fd;
+}
+
+.footer-wrap .logo {
+  display: inline-block;
+  margin-bottom: 16px;
 }
